--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a{
 }
 
 .wrapper > div{
-	padding-top:40%;
+
 }
 
 #intro{
@@ -69,4 +69,16 @@ a{
     ), url(../images/exercise.jpg);
 	background-size: cover;
 	background-position: center;
+}
+
+@media screen and (max-width: 1080px){
+	.wrapper{
+		grid-template-columns: 1fr;
+		grid-template-areas:
+			"intro"
+			"profile"
+			"heartrate"
+			"bloodpressure"
+			"exercise"
+	}
 }
